# k_clique

./: .gitignore  CMakeLists.txt  Makefile  a.out  constants.cuh  count_cliques.cu  count_cliques.cuh  direct.cu  direct.cuh  in  input.cu  input.cuh  input.h  k-clique.code-workspace  main.cu  mkfile.bak  orient.cu  orient.cuh  output.txt  pivot.cu  pivot.cuh  report.md  scratch  scratch.cpp  scratch.cu  scratch.out  scratch.py  scratch2.cu  test.py  todo.md  util.cuh
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.bak
src/: constants.cuh  count_cliques.cu  count_cliques.cuh  direct.cu  direct.cuh  input.cu  input.cuh  main.cu  orient.cu  pivot.cu  util.cuh
